force-app/main/default/objects/Cubicle__mdt/Cubicle__mdt.object-meta.xml
<CustomObject>
    <label>Cubicle</label>
    <pluralLabel>Cubicles</pluralLabel>
</CustomObject>