force-app/main/default/objects/Cubicle__mdt/fields/Block__c.field-meta.xml
<CustomField>
    <fullName>Block__c</fullName>
    <label>Block</label>
    <referenceTo>Block__mdt</referenceTo>
    <relationshipLabel>Cubicles</relationshipLabel>
    <relationshipName>Cubicles</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>