force-app/main/default/objects/Cubicle__mdt/fields/Cubicle_Id__c.field-meta.xml
<CustomField>
    <fullName>Cubicle_Id__c</fullName>
    <label>Cubicle Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>