force-app/main/default/objects/Cubicle__mdt/fields/entry__c.field-meta.xml
<CustomField>
    <fullName>entry__c</fullName>
    <label>entry</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>leftentry</fullName>
                <default>true</default>
                <label>leftentry</label>
            </value>
            <value>
                <fullName>topentry</fullName>
            </value>
            <value>
                <fullName>rightentry</fullName>
            </value>
            <value>
                <fullName>bottomentry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>